--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   database:
     image: mysql:8.0
     platform: linux/amd64
+    container_name: mysql 
     command:
       - "--default-authentication-plugin=mysql_native_password"
     environment:
@@ -14,31 +15,24 @@ services:
     ports:
       - "3306:3306"
     restart: always
-
-  example-c:
-    image: example-c
-    build: images/example-c
-    command: ["./example"]
     volumes:
-      - ./data:/data
-
-  example-node:
-    image: example-node
-    build: images/example-node
-    command: ["./example.js"]
-    volumes:
-      - ./data:/data
-
-  example-python:
-    image: example-python
-    build: images/example-python
-    command: ["./example.py"]
-    volumes:
-      - ./data:/data
-
-  example-r:
-    image: example-r
-    build: images/example-r
-    command: ["./example.R"]
-    volumes:
-      - ./data:/data
+      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
+  phpmyadmin:
+    image: phpmyadmin:latest
+    platform: linux/amd64
+    container_name: pma 
+    links:
+      - database
+    environment:
+      - PMA_HOST=database
+      - PMA_PORT=3306
+      - PMA_ARBITRARY=1
+    ports:
+      - "8080:80"
+    restart: always
+  # solution:
+  #   image: solution
+  #   build: images/solution
+  #   command: ["./solution.py"]
+  #   volumes:
+  #     - ./data:/data
