--- a/images/solution/Dockerfile
+++ b/images/solution/Dockerfile
@@ -2,7 +2,5 @@ FROM python:3.10
 
 WORKDIR /app
 
-COPY requirements.txt ./
+COPY / ./
 RUN pip install --no-cache-dir -r requirements.txt
-
-COPY example.py ./
